--- a/src/styles/partials/_hero-collage.scss
+++ b/src/styles/partials/_hero-collage.scss
@@ -7,9 +7,17 @@
 	overflow: hidden;
 	isolation: isolate;
 
+    &.has-texture{
+
+        &::after{
+            opacity: 0.4;
+            mix-blend-mode: difference;
+        }
+    }
+
 	.wolf-hero-collage__inner {
 		position: relative;
-		z-index: 1;
+		z-index: 2;
 		display: grid;
 		min-height: inherit;
 		place-items: center;
