--- a/src/styles/partials/_marquee.scss
+++ b/src/styles/partials/_marquee.scss
@@ -1,5 +1,10 @@
 @use 'tokens' as *;
 
+.wolf-blocks-marquee {
+	border-top:1px solid $c-border;
+}
+
 .wolf-blocks-marquee__item-separator {
 	color: $c-primary;
+	border-top:1px solid $c-border;
 }
